--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.0.1"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
