--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "next": "9.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "styled-jsx": "^3.2.5"
   },
   "devDependencies": {
-    "jest": "^25.1.0"
+    "file-loader": "^6.0.0",
+    "jest": "^25.1.0",
+    "url-loader": "^4.0.0"
   }
 }
