--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "9.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-helmet": "^5.2.1",
     "styled-components": "^5.0.1",
     "styled-jsx": "^3.2.5"
   },
