--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "^5.2.1",
+    "react-slick": "^0.25.2",
     "styled-components": "^5.0.1",
     "styled-jsx": "^3.2.5"
   },
