--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "file-loader": "^6.0.0",
     "jest": "^25.1.0",
+    "moxios": "^0.4.0",
     "url-loader": "^4.0.0"
   }
 }
