--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "node express-proxy/proxy.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
@@ -12,12 +13,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.3.1",
+    "next": "^9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "^5.2.1",
     "react-slick": "^0.25.2",
+    "request": "^2.88.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1",
     "styled-jsx": "^3.2.5"
