--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "server": "node express-proxy/proxy.js",
     "dev": "concurrently -n 'server,client' -c 'green,blue' \"npm run server\" \"next dev\"",
     "build": "next build",
-    "start": "next start"
+    "start": "concurrently \"npm run server\" \"next start\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.4.4",
+    "path": "^0.12.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "^5.2.1",
