--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "request": "^2.88.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1",
-    "styled-jsx": "^3.2.5"
+    "styled-jsx": "^3.2.5",
+    "concurrently": "^5.2.0"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
     "file-loader": "^6.0.0",
     "jest": "^25.1.0",
     "moxios": "^0.4.0",
