--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "styled-jsx": "^3.2.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "babel-jest": "^26.1.0",
     "file-loader": "^6.0.0",
     "jest": "^25.1.0",
     "moxios": "^0.4.0",
